name:                gamenumber
version:             0.0.1
synopsis:            simple game
description:         GameNumber is simple game with AI players
license:             GPL-3
license-file:        LICENSE
author:              Evgeny Pashkin
maintainer:          epashkin@cognitive.ru
copyright:           (C) 2014 Evgeny Pashkin
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-dir:            Data
data-files:          VL-PGothic-Regular.ttf

Flag Freegame
  Description:         Enable building free-game executable
  Default:             True

Flag Gloss
  Description:         Enable building gloss executable
  Default:             True

executable gamenumber_fg
  main-is:             Main.hs
  if !flag(Freegame)
    buildable:         False
  else
    build-depends:     base >=4.6,
                       gamenumber,
                       mtl,
                       cond,
                       lens,
                       free,
                       free-game >=1.1.80
  hs-source-dirs:      src/freegame
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded

executable gamenumber_gl
  main-is:             Main.hs
  if !flag(Gloss)
    buildable:         False
  else
    build-depends:     base >=4.6,
                       gamenumber,
                       mtl,
                       cond,
                       lens,
                       gloss
  hs-source-dirs:      src/gloss
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded

library
  build-depends:       base >=4.6,
                       random,
                       array,
                       containers,
                       mtl,
                       cond,
                       bytestring,
                       binary,
                       lens
  hs-source-dirs:      src/lib
  default-language:    Haskell2010
  ghc-options:         -O2
  exposed-modules:     GameLogic
  other-modules:       
                       GameLogic.Logic,
                       GameLogic.StartLogic,
                       GameLogic.Util,
                       GameLogic.Data.Facade,
                       GameLogic.Data.Cell,
                       GameLogic.Data.Game,
                       GameLogic.Data.Players,
                       GameLogic.Data.Settings,
                       GameLogic.Data.World,
                       GameLogic.Data.GameState,
                       GameLogic.AI.Actions,
                       GameLogic.AI.PossibleAction,
                       GameLogic.Action.Attack,
                       GameLogic.Action.Defend,
                       GameLogic.Action.ModifyPlayer,
                       GameLogic.Action.Shield,
                       GameLogic.Util.Shuffle,
                       GameLogic.Util.RandomState

source-repository head
  type: git
  location: git://github.com/EPashkin/gamenumber.git
