name:                gamenumber
version:             0.0.1
synopsis:            simple game
description:         GameNumber is simple game with AI players
license:             GPL-3
license-file:        LICENSE
author:              Evgeny Pashkin
maintainer:          epashkin@cognitive.ru
copyright:           (C) 2014 Evgeny Pashkin
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:       base >=4.6,
                       random,
                       array,
                       containers,
                       mtl,
                       cond,
                       bytestring,
                       binary,
                       lens
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     GameLogic
  other-modules:       
                       GameLogic.Logic,
                       GameLogic.StartLogic,
                       GameLogic.Util,
                       GameLogic.Data.Facade,
                       GameLogic.Data.Cell,
                       GameLogic.Data.Game,
                       GameLogic.Data.Players,
                       GameLogic.Data.Settings,
                       GameLogic.Data.World,
                       GameLogic.Data.GameState,
                       GameLogic.AI.Actions,
                       GameLogic.AI.PossibleAction,
                       GameLogic.Action.Attack,
                       GameLogic.Action.Defend,
                       GameLogic.Action.ModifyPlayer,
                       GameLogic.Action.Shield,
                       GameLogic.Util.Shuffle,
                       GameLogic.Util.RandomState

source-repository head
  type: git
  location: git://github.com/EPashkin/gamenumber.git
